--- a/index.html
+++ b/index.html
@@ -144,15 +144,8 @@
             <div class="b2" style="right: 0"></div>
         </div>
         <div class="warp">
-
-            ont-family 可以把多个字体名称作为一个“回退”系统来保存。如果浏览器不支持第一个字体，则会尝试下一个。也就是说，font-family 属性的值是用于某个元素的字...
-
-            基本信息 语法 参数 说明 示例 用法 浏览器支持
-
-            baike.baidu.com/
-
-            FontFamily 看这里就够了 - CSDN博客
-            2018年4月20日 - TextView中字体设置 typeface 一、配置设置 代码方式设置 fontFamily 文字如何实现加粗、斜体? 三者之间的关系 自定义字体 参考: TextView中字体设置 ...
+            ont-family 可以把多个字体名称作为一个“回退”系统来保存。如果浏览器不支持第一个字体，则会尝试下一个。也就是说，font-family 属性的值是用于某个元素的字...基本信息 语法 参数 说明 示例 用法 浏览器支持
+            baike.baidu.com/FontFamily 看这里就够了 - CSDN博客2018年4月20日 - TextView中字体设置 typeface 一、配置设置 代码方式设置 fontFamily 文字如何实现加粗、斜体? 三者之间的关系 自定义字体 参考: TextView中字体设置 ...
             https://blog.csdn.net/yuanxw44...  - 百度快照
             CSS font-family常见中文字体对应的英文名称 « 张鑫旭-鑫空间-...
             2017年3月25日 - 虽然一些常见中文字体,例如“宋体”,“微软雅黑”等,直接使用中文名称作为CSS font-family的属性值也能生效,但我们一般都不使用中文名称,而是使用英文...
@@ -163,18 +156,14 @@
             web页面font-family显示 - 屏幕后的无奈 - 博客园
             2018年4月30日 - font-family属性很简单,直接写在css或style样式中即可。 如: font-family: "Microsoft YaHei"; 但是如果希望电脑能正确的显示我们设置的字体,必须电脑...
             https://www.cnblogs.com/gwcyul...  - 百度快照
-
         </div>
-
     </div>
 </div>
 </body>
 <script src="js/jquery.min.js"></script>
 <script>
     $(function () {
-        $('.box1').css({
-            height: $('.box1').width() + "px"
-        })
+        $('.box1').css({height: $('.box1').width() + "px" })
     })
 </script>
 </html>
