--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         height: 90%;
         line-height: 25px;
         overflow-y: scroll;
-        color: #c3a872;;
+        color: #c3a872; word-wrap:break-word;
         }
         .warp::-webkit-scrollbar {/*滚动条整体样式*/
             width: 9px;     /*高宽分别对应横竖滚动条的尺寸*/
@@ -144,6 +144,8 @@
             <div class="b2" style="right: 0"></div>
         </div>
         <div class="warp">
+             444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444
+=======
             ont-family 可以把多个字体名称作为一个“回退”系统来保存。如果浏览器不支持第一个字体，则会尝试下一个。也就是说，font-family 属性的值是用于某个元素的字...基本信息 语法 参数 说明 示例 用法 浏览器支持
             baike.baidu.com/FontFamily 看这里就够了 - CSDN博客2018年4月20日 - TextView中字体设置 typeface 一、配置设置 代码方式设置 fontFamily 文字如何实现加粗、斜体? 三者之间的关系 自定义字体 参考: TextView中字体设置 ...
             https://blog.csdn.net/yuanxw44...  - 百度快照
